<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Profile_v1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="photo">photo</string>
    <string name="name">NAME: Mike</string>
    <string name="gender">GENDER: Male</string>
    <string name="age">AGE: XX</string>
    <string name="phone">PHONE: XXX-XXXX</string>
    <string name="info">INFORMATION:</string>
    <string name="pedo">Pedometer</string>
    <string name="heart">Heart Rate</string>
    <string name="loca">Location</string>
    <string name="post">Posture</string>
    <string name="title_activity_heartrate">Heartrate</string>
    <string name="title_activity_login">Login</string>
    <string name="subheart">ECG-Heart Rate</string>
    <string name="returnheart">Return</string>
    <string name="title_activity_pedometer">Pedometer</string>
    <string name="subpedo">Pedometer</string>
    <string name="returnpedo">Return</string>
    <string name="title_activity_location">Location</string>
    <string name="subloca">Location</string>
    <string name="returnloca">Return</string>
    <string name="title_activity_posture">Posture</string>
    <string name="subpost">Posture</string>
    <string name="returnpost">Return</string>
    <string name="startTxt">Start</string>
    <string name="stopTxt">Stop</string>
    <string name="timeTxt">Time</string>
    <string name="voltTxt">Voltage</string>
    <string name="clearTxt">Clear</string>
    <string name="pauseTxt">Pause</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_splash">Splash</string>
    <string name="startscreen">Start</string>
    <string name="scan">scan</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_training">Set training point</string>
    <string name="button_locate">Locate</string>
    <string name="button_map">Map</string>
    <string name="button_wifi">Wifi</string>
    <string name="loading">Loading…</string>
    <string name="map">Map</string>
    <string name="reset">Reset</string>
    <string name="title_activity_display_wifi">DisplayWifi</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="blueon">Turn On</string>
    <string name="bluevisible">Get Visible</string>
    <string name="bluesearch">Search Devices</string>
    <string name="bluepair">Paired Devices</string>
    <string name="blueoff">Turn Off</string>
    <string name="bluetooth">Bluetooth Setting</string>
    <string name="bluecancel">Cancel</string>
    <string name="pedo_currentacc">Current Acceleration</string>
    <string name="pedo_xaxis">X-Axis</string>
    <string name="pedo_yaxis">Y-Axis</string>
    <string name="pedo_zaxis">Z-Axis</string>
    <string name="pedo_xaxisdata">0.0</string>
    <string name="pedo_yaxisdata">0.0</string>
    <string name="pedo_zaxisdata">0.0</string>
    <string name="pedo_maxacc">Max Acceleration</string>
    <string name="pedo_xaxismax">Acc-X</string>
    <string name="pedo_yaxismax">Acc-Y</string>
    <string name="pedo_zaxismax">Acc-Z</string>
    <string name="pedo_accxmax">0.0</string>
    <string name="pedo_accymax">0.0</string>
    <string name="pedo_acczmax">0.0</string>
    <string name="pedo_step">Step detection</string>
    <string name="pedo_stepnum">0.0</string>
    <string name="pedo_reset">Reset</string>
    <string name="pedo_start">Start</string>
    <string name="pedo_stop">Stop</string>
    <string name="pedo_speed">Walking Speed</string>
    <string name="pedo_speednum">0.0</string>

</resources>
