<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ece4600.mainapp.Heartrate" >

    <TextView
        android:id="@+id/subheart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/subheart"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/returnheart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/returnheart" />

    <LinearLayout
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chart"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/stopButton"
        android:onClick="pauseDAQ"
        android:text="@string/pauseTxt" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chart"
        android:layout_centerHorizontal="true"
        android:onClick="stopDAQ"
        android:text="@string/stopTxt" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subheart"
        android:layout_marginRight="14dp"
        android:layout_marginTop="22dp"
        android:layout_toLeftOf="@+id/returnheart"
        android:onClick="startDAQ"
        android:text="@string/startTxt" />

</RelativeLayout>
