<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/subloca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/subloca"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Turn on" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Turn off" />

        <EditText
            android:id="@+id/roomnm"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="room1" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/spotnm"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="spot1" />

        <Button
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Record" />

        <Button
            android:id="@+id/output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="delete_xml"
            android:visibility="visible" />

        <Button
            android:id="@+id/returnloca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/returnloca" />

        <TextView
            android:id="@+id/allNetWork"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="There is no WiFi available currently" />
    </LinearLayout>

</ScrollView>